--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ edu/dependencies/build
 native/**/build/
 stale_outputs_checked
 /android
+
+# detekt can be configured by ./platform/jewel/detekt-rules/install-rules-to-idea.sh
+/.idea/detekt.xml
