[JEWEL-992] Hide mouse cursor while typing in BTF on macOS

--- a/platform/jewel/int-ui/int-ui-standalone/BUILD.bazel
+++ b/platform/jewel/int-ui/int-ui-standalone/BUILD.bazel
@@ -37,6 +37,7 @@ jvm_library(
     "//libraries/compose-runtime-desktop",
     "//platform/jewel/foundation",
     "//libraries/jbr",
+    "@lib//:jna",
   ],
   plugins = ["@lib//:compose-plugin"]
 )
