--- a/platform/vcs-api/vcs-api-core/resources/messages/VcsBundle.properties
+++ b/platform/vcs-api/vcs-api-core/resources/messages/VcsBundle.properties
@@ -579,6 +579,7 @@ changes.remove.active.title=Delete Active Changelist
 create.patch.loading.content.progress=Loading Content Revisions
 create.patch.reverse.checkbox=&Reverse patch
 create.patch.standard.format.checkbox=Use &standard patch format (no IDEA additional info)
+create.patch.full.commit.message.checkbox=Include &full commit message
 create.patch.file.path=To &file:
 create.patch.to.clipboard=To &clipboard
 create.patch.encoding=&Encoding:
