[JEWEL] Update Detekt and enable checks for public surface documentation
- The initial idea of this PR was basically to start using the existing
detekt rules to ensure we add public documentation. They are:
  - OutdatedDocumentation
  - UndocumentedPublicClass
  - UndocumentedPublicFunction
  - UndocumentedPublicProperty
- But, when one of these conditions matches, the version 1.x from
detekt considers it a failure and crashes the run
- In this initial moment, my goal was to enable as "warning" level
and reuse that information to log in the PR in case it's related to any
touched code
- However, some features like setting the minimum version to "break" is
only added in the 2.x version of detekt

--- a/platform/jewel/detekt.yml
+++ b/platform/jewel/detekt.yml
@@ -1,16 +1,8 @@
-build:
-  maxIssues: 0
-  excludeCorrectable: false
-  weights:
-  # complexity: 2
-  # LongParameterList: 1
-  # style: 1
-  # comments: 1
-
 config:
   validation: true
+  warningsAsErrors: false
   # when writing own rules with new properties, exclude the property path e.g.: 'my_rule_set,.*>.*>[my_property]'
-  excludes: ''
+  excludes: [ 'jewel>.*>.*' ]
 
 processors:
   active: true
@@ -32,7 +24,46 @@ console-reports:
     - 'FileBasedFindingsReport'
 
 comments:
-  active: false
+  active: true
+  AbsentOrWrongFileLicense:
+    active: false
+    licenseTemplateFile: 'license.template'
+    licenseTemplateIsRegex: false
+  CommentOverPrivateFunction:
+    active: false
+  CommentOverPrivateProperty:
+    active: false
+  DeprecatedBlockTag:
+    active: false
+  EndOfSentenceFormat:
+    active: false
+    endOfSentenceFormat: '([.?!][ \t\n\r\f<])|([.?!:]$)'
+  KDocReferencesNonPublicProperty:
+    active: false
+    excludes: [ '**/test/**', '**/androidTest/**', '**/commonTest/**', '**/jvmTest/**', '**/androidUnitTest/**', '**/androidInstrumentedTest/**', '**/jsTest/**', '**/iosTest/**' ]
+  OutdatedDocumentation:
+    active: false
+    matchTypeParameters: true
+    matchDeclarationsOrder: true
+    allowParamOnConstructorProperties: false
+  UndocumentedPublicClass:
+    active: false
+    excludes: [ '**/test/**', '**/androidTest/**', '**/commonTest/**', '**/jvmTest/**', '**/androidUnitTest/**', '**/androidInstrumentedTest/**', '**/jsTest/**', '**/iosTest/**' ]
+    searchInNestedClass: true
+    searchInInnerClass: true
+    searchInInnerObject: true
+    searchInInnerInterface: true
+    searchInProtectedClass: false
+    ignoreDefaultCompanionObject: false
+  UndocumentedPublicFunction:
+    active: false
+    excludes: [ '**/test/**', '**/androidTest/**', '**/commonTest/**', '**/jvmTest/**', '**/androidUnitTest/**', '**/androidInstrumentedTest/**', '**/jsTest/**', '**/iosTest/**' ]
+    searchProtectedFunction: false
+  UndocumentedPublicProperty:
+    active: false
+    severity: info
+    excludes: [ '**/test/**', '**/androidTest/**', '**/commonTest/**', '**/jvmTest/**', '**/androidUnitTest/**', '**/androidInstrumentedTest/**', '**/jsTest/**', '**/iosTest/**' ]
+    searchProtectedProperty: false
 
 complexity:
   active: true
@@ -101,7 +132,6 @@ style:
     active: true
   ExpressionBodySyntax:
     active: true
-    autoCorrect: true
     includeLineWrapping: false
   ForbiddenComment:
     active: true
@@ -137,13 +167,11 @@ style:
     active: true
   OptionalUnit:
     active: true
-  PreferToOverPairSyntax:
-    active: true
   RedundantExplicitType:
     active: true
   ReturnCount:
     active: false
-  SpacingBetweenPackageAndImports:
+  SpacingAfterPackageDeclaration:
     active: true
   ThrowsCount:
     active: true
@@ -154,14 +182,17 @@ style:
     active: true
   UnnecessaryParentheses:
     active: false
-  UnnecessaryAbstractClass:
-    ignoreAnnotated:
-      - Module
-  UntilInsteadOfRangeTo:
+  RangeUntilInsteadOfRangeTo:
     active: true
-  UnusedImports:
+  UnusedImport:
     active: true
-  UnusedPrivateMember:
+  UnusedPrivateClass:
+    # We need to disable this otherwise we'd need to @Suppress all Composable previews...
+    active: false
+  UnusedPrivateFunction:
+    # We need to disable this otherwise we'd need to @Suppress all Composable previews...
+    active: false
+  UnusedPrivateProperty:
     # We need to disable this otherwise we'd need to @Suppress all Composable previews...
     active: false
   UseArrayLiteralsInAnnotations:
@@ -188,10 +219,16 @@ naming:
     active: false
     ignoreAnnotated:
       - Composable
+
 jewel:
   EqualityMembersRule:
+    active: true
+    autoCorrect: true
     annotated:
       - GenerateDataFunctions
+  MissingApiStatusAnnotationRule:
+    active: true
+    autoCorrect: true
 
 Compose:
   CompositionLocalAllowlist:
