IJPL-232015 MCP Server: persist resolved port on enable
Signed-off-by: Adrian Cole <adrian@tetrate.io>

--- a/plugins/mcp-server/tests/BUILD.bazel
+++ b/plugins/mcp-server/tests/BUILD.bazel
@@ -24,6 +24,7 @@ jvm_library(
     "//libraries/junit5-params",
     "//libraries/kotlin/test:libraries-kotlinTest",
     "//libraries/kotlin/test-assertions-core-jvm:libraries-kotlinTestAssertionsCoreJvm",
+    "//libraries/kotlinx/coroutines/test",
     "//libraries/io",
     "//libraries/kotlinx/serialization/core",
     "//libraries/kotlinx/serialization/json",
