--- a/plugins/toml/tests/src/test/resources/org/toml/ide/folding/fixtures/inline_table.toml
+++ b/plugins/toml/tests/src/test/resources/org/toml/ide/folding/fixtures/inline_table.toml
@@ -1,3 +1,7 @@
 [table]<fold text='{...}'>
 a = <fold text='{...}'>{ a = 1, b = <fold text='[...]'>[2, 3]</fold> }</fold>
-b = {}</fold>
+b = {}
+c = <fold text='{...}'>{
+x = 1,
+y = 2,
+}</fold></fold>
