[JEWEL-993] Add MacOS Scrollbar Detection to Standalone

--- a/platform/jewel/detekt.yml
+++ b/platform/jewel/detekt.yml
@@ -58,6 +58,7 @@ coroutines:
 
 exceptions:
   active: true
+  excludes: [ '**/test/**', '**/androidTest/**', '**/*.Test.kt', '**/*.Spec.kt', '**/*.Spek.kt' ]
   NotImplementedDeclaration:
     active: true
   ObjectExtendsThrowable:
