[JEWEL-1228] Add CornerSize and Padding to BannerMetrics

--- a/plugins/devkit/intellij.devkit.compose/resources/messages/DevkitComposeBundle.properties
+++ b/plugins/devkit/intellij.devkit.compose/resources/messages/DevkitComposeBundle.properties
@@ -57,6 +57,12 @@ jewel.swing.editable.disabled=Editable + Disabled
 jewel.swing.text.areas=Text areas:
 jewel.swing.label=Swing
 jewel.compose.label=Compose
+jewel.inline.banners.label=Inline Banners
+jewel.swing.inline.banners=Swing inline banner
+jewel.compose.inline.banners=Compose inline banner
+jewel.banners.label=Banners
+jewel.swing.banners=Swing default banner
+jewel.compose.banners=Compose default banner
 
 compose.sandbox=Compose Sandbox
 compose.sandbox.show.automatically.on.project.open=Show automatically on project open
